--- a/.travis.yaml
+++ b/.travis.yaml
@@ -5,5 +5,5 @@ services:
 before_install:
   - docker build -t hsz4docker/docker-react -f Dockerfile.dev .
 
-scripts:
+script:
   - docker run hsz4docker/docker-react npm run test -- --coverage
