--- a/.travis.yaml
+++ b/.travis.yaml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t hsz4docker/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run hsz4docker/docker-react npm run test -- --coverage
+  - docker run -e CI=true hsz4docker/docker-react npm run test
